--- a/ViocareWebApp/Pages/Index.cshtml
+++ b/ViocareWebApp/Pages/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@page
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Version 2</h1>
+    <h1 class="display-4">Welcome Version 2 @Configuration["MYConfig:ConnectionString"]</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
